--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -17,6 +17,7 @@ DOCKER_SOCKET_PATH=/var/run/docker.sock
 # Mongo configuration
 MONGO_ENABLED=true
 MONGO_DATA_PATH=data/mongo
+MONGO_CONFIG_DATA_PATH=data/mongo-config
 MONGO_IMAGE=mongo:4.4
 
 # Redis configuration
